--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <title>Sign Case Study</title>
     <link rel="stylesheet" type="text/css" href="stylesheets\stylesheet.css">
     <script type="text/javascript" src="js/loadImages.js"></script>
+    <script type="text/javascript" src="js/masonry.pkgd.min.js"></script>
   </head>
   <body>
     <!--<div id="floatImage"></div>-->
-    <div id="backgroundImages" onload="loadImages"></div>
+    <div class="grid" onload="loadImages"></div>
   </body>
 </html>
