Fixed onload bug where all the images stacked in the top left corner.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <!--<div id="floatImage"></div>-->
-    <div class="grid" onload="loadImages"></div>
+    <div id="grid">
+    </div>
   </body>
 </html>
