Organized js packages in own file and added social media links.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <html>
   <head>
     <title>Sign Case Study</title>
-    <link rel="stylesheet" type="text/css" href="stylesheets\stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="js/packages/font-awesome-4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css">
     <script type="text/javascript" src="js/loadImages.js"></script>
-    <script type="text/javascript" src="js/masonry.pkgd.min.js"></script>
+    <script type="text/javascript" src="js/packages/masonry.pkgd.min.js"></script>
   </head>
   <body>
     <!--<div id="floatImage"></div>-->
     <div id="grid">
+    </div>
+    <div id="social">
+      <ul>
+         <li><a href="https://www.facebook.com/YoshGuenther-Photography-838991232866356/"><i class="fa fa-facebook fa-2x" id="facebook"></i></a></li>
+         <li><a href="https://www.twitter.com/YoshGuenther"><i class="fa fa-twitter fa-2x" id="twitter"></i></a></li>
+         <li><a href="https://www.flickr.com/photos/132530471@N02/"><i class="fa fa-flickr fa-2x" id="flickr"></i></a></li>
+         <li><a href="https://www.instagram.com/yoshguenther/"><i class="fa fa-instagram fa-2x" id="instagram"></i></a></li>
+       </ul>
     </div>
   </body>
 </html>
