Began working on search box to filter the images based on a name.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <script type="text/javascript" src="js/packages/masonry.pkgd.min.js"></script>
   </head>
   <body>
-    <!--<div id="floatImage"></div>-->
+    <div id="options">
+      <form action="javascript:searchAndFilter" id="searchForm">
+        <input type="text" name="search" id="search">
+        <input type="submit" value="Submit" id="searchButton">
+      </form>
+    </div>
     <div id="grid">
     </div>
     <div id="social">
