Added search functionality that repopulates page. The actual search is not working though, but the page gets repopulated.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="options">
       <form action="javascript:searchAndFilter" id="searchForm">
         <input type="text" name="search" id="search">
-        <input type="submit" value="Submit" id="searchButton">
+        <input type="submit" value="Submit" id="searchButton" onclick="searchAndFilter();">
       </form>
     </div>
     <div id="grid">
