Initial setup of site description.

--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <script type="text/javascript" src="js/packages/masonry.pkgd.min.js"></script>
   </head>
   <body>
-    <div id="options">
-      <form action="javascript:searchAndFilter" id="searchForm">
-        <input type="text" name="search" id="search">
-        <input type="submit" value="Submit" id="searchButton" onclick="searchAndFilter();">
-      </form>
+    <div id="wrapper>">
+      <div id="description">
+        <p>This is a website to showcase the beauty of commercial signs at night.</p>
+      </div>
+      <div id="options">
+        <form action="javascript:searchAndFilter" id="searchForm">
+          <input type="text" name="search" id="search">
+          <input type="submit" value="Submit" id="searchButton" onclick="searchAndFilter();">
+        </form>
+      </div>
     </div>
     <div id="grid">
     </div>
