Resolve overlapping issue of Masonry.js on description div.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="wrapper>">
       <div id="description">
-        <p>This is a website to showcase the beauty of commercial signs at night.</p>
+        <span>This is a website to showcase the beauty of commercial signs at night. Signs were photographed in Marble Falls, Granite Shoals, Austin, and San Marcos.</span>
       </div>
       <div id="options">
         <form action="javascript:searchAndFilter" id="searchForm">
