Transferred json object to Plain Old Javscript Object and integrated image load script to work with the JavaScript Object.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <title>Sign Case Study</title>
     <link rel="stylesheet" type="text/css" href="js/packages/font-awesome-4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css">
-    <script type="text/javascript" src="js/loadImages.js"></script>
+    <script type="text/javascript" src="js/imageData.json"></script>
     <script type="text/javascript" src="js/packages/masonry.pkgd.min.js"></script>
+    <script type="text/javascript" src="js/loadImages.js"></script>
   </head>
   <body>
     <div id="wrapper>">
